new selects in and new popup functionality with some issues.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -452,10 +452,18 @@ input[type="checkbox"], input[type="radio"] {
     top:50%;
 }
 
+/*some margin for the select filters*/
+.bootstrap-select{
+    margin:5px;
+}
+
+
 /*-------CRITICAL-----------ALLOWS CLICK EVENTS TO PERMEATE THROUGH FEATURE LAYERS TO WMS*/
 g {
     pointer-events: none;
 }
+
+
 
 
 
